# SongSpark

./: .gitignore  Cargo.toml  README.md  index.html  styles.css
src/: app.rs  audio.rs  main.rs  patterns.rs
src/components/: editor.rs  metronome.rs  player.rs  sample_library.rs  visualizer.rs
